--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.0.0",
+    "history": "^5.0.0",
+    "immer": "^8.0.1",
+    "immutable": "^4.0.0-rc.12",
+    "prismic-reactjs": "^1.3.3",
     "react": "^17.0.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-switch": "^6.0.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
